--- a/3d/package.json
+++ b/3d/package.json
@@ -5,15 +5,17 @@
   "main": "sketch.js",
   "scripts": {
     "dev": "npm run docs && canvas-sketch index.js --open --hot --output=output",
-    "docs": "open https://simon.html5.org/dump/html5-canvas-cheat-sheet.html",
+    "docs": "open https://threejs.org/docs/",
     "build": "canvas-sketch index.js --build --dir public/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bezier-easing": "^2.1.0",
     "canvas-sketch": "^0.6.1",
     "canvas-sketch-util": "^1.8.0",
+    "eases": "^1.0.8",
     "nice-color-palettes": "^3.0.0",
     "three": "^0.108.0"
   },
